--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ h1 {
 h2 {
   font-size: 2.5rem;
   font-weight: 600;
-  margin: 1.5rem auto;
+  margin: 1rem auto;
 }
 
 label {
@@ -60,8 +60,7 @@ textarea:focus {
   border-radius: 5%;
   color: white;
   background-color: #562b81;
-  width: 4rem;
-  height: 1.75rem;
+  padding: 0.25rem 0.75rem;
+  font-size: 1rem;
   margin: 1rem 0;
-  letter-spacing: 0.1rem;
 }
