--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,9 @@ textarea {
   width: 100%;
   outline: none;
   resize: none;
+  padding: 0.25rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
 }
 
 header {
@@ -37,6 +40,7 @@ header {
 
 .journal-photo > img {
   width: 100%;
+  border-radius: 0.5rem;
 }
 
 /* Utilities */
