--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ h1 {
 
 h2 {
   font-size: 2.5rem;
-  font-weight: 600;
   margin: 1rem auto;
 }
 
@@ -61,7 +60,7 @@ textarea:focus {
 
 #save {
   border: none;
-  border-radius: 5%;
+  border-radius: 0.25rem;
   color: white;
   background-color: #562b81;
   padding: 0.25rem 0.75rem;
