--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@ h2 {
   margin: 1rem auto;
 }
 
+@media screen and (min-width: 768px) {
+  h2 {
+    padding: 0 0.75rem;
+  }
+}
+
 label {
   font-size: 1.2rem;
   font-weight: 600;
