--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ h3 {
 p {
   font-size: 1.25rem;
   font-weight: 400;
+  white-space: pre-wrap;
 }
 
 @media screen and (min-width: 768px) {
@@ -64,6 +65,14 @@ ul {
 .entry-photos > img {
   width: 100%;
   border-radius: 0.5rem;
+}
+
+.fa-pencil {
+  color: #562b81;
+}
+
+.fa-pencil:hover {
+  cursor: pointer;
 }
 
 /* Utilities */
